fixed header z-index

--- a/static/style.css
+++ b/static/style.css
@@ -235,6 +235,7 @@ button {
   width: 100%;
   background-color: white;
   top: 0;
+  z-index: 1;
 }
 
 nav {
